--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- PUT A TITLE IN HERE -->
-    <title>Your Project Title</title>
-    <!-- PUT A DESCRIPTION IN HERE -->
+    <!-- Mood Bubble -->
+    <title>Mood Bubble</title>
+    <!-- Mood Bubble is a website that dedicate to help you feel better -->
     <meta name="description" content="describe content of the page here...." />
     <!-- LINK TO NORMALIZE (FOR CONSISTENCY) -->
     <link rel="stylesheet" href="styles.normalize.css" />
@@ -19,7 +19,14 @@
   </head>
   <body>
     <!-- YOUR HTML GOES HERE -->
-
+    <div>
+      <button class='a'></button>
+      <button class='b'></button>
+      <button class='c'></button>
+      <button class='d'></button>
+      </div>
+      
+      <h1> How Are You Feeling Today? </h1>
     <!-- YOUR EXTERNAL PLUG-IN MAY ASK YOU TO PUT A SCRIPT TAG HERE. -->
   </body>
 </html>
