--- a/index.html
+++ b/index.html
@@ -15,15 +15,28 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <!-- LINK TO EXTERNAL JS LIBRARIES HERE -->
     <!-- LINK TO YOUR JS HERE. NOTE THE DEFER ATTRIBUTE. -->
-    <script src="scripts/scripts.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./scripts/scripts.js" defer></script>
   </head>
   <body>
     <!-- YOUR HTML GOES HERE -->
     <div>
-      <button class='a'></button>
-      <button class='b'></button>
-      <button class='c'></button>
-      <button class='d'></button>
+      <button class='a'>Happy
+      </button>
+      <button class='b'>Energetic
+      </button>
+      <button class='c'>Blissful
+      </button>
+      <button class='d'>Cheerful
+      </button>
+      <button class='e'>Exhausted
+      </button>
+      <button class='f'>Sad
+      </button>
+      <button class='g'>Depressed
+      </button>
+      <button class='h'>Stressed
+      </button>
       </div>
       
       <h1> How Are You Feeling Today? </h1>
