--- a/Keepupgreatwork.html
+++ b/Keepupgreatwork.html
@@ -5,18 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/surveypage.css">
+    <link rel="stylesheet" href="styles/keepupgreatwork.css">
 </head>
 
-<body>
+
 <div id=circle></div>
-<h1> Feel Better? </h1>
 
 <div>
-	<h3> Strongly Agree </h3>
-	<h3> Agree </h3>
-	<h3> Neither Agree nor Disagree </h3>
-	<h3> Disagree </h3>
-	<h3> Strongly Disagree </h3>
+    <h1>Keep up the<br> great work!</h1>
+    <h3><a href = "index.html">Return to homepage</a></h3>
 </div>
-</body>
+
