--- a/bored.html
+++ b/bored.html
@@ -12,34 +12,26 @@
     <link rel="stylesheet" href="styles.normalize.css" />
     <!-- LINK TO ANY FRAMEWORK STYLES HERE-->
     <!-- LINK TO YOUR STYLES -->
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/bored.css" />
     <!-- LINK TO EXTERNAL JS LIBRARIES HERE -->
     <!-- LINK TO YOUR JS HERE. NOTE THE DEFER ATTRIBUTE. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./scripts/scripts.js" defer></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');
+        </style>
   </head>
+
   <body>
-    <!-- YOUR HTML GOES HERE -->
-    <div>
-      <button class='a'><a href = "happy.html">Happy</a>
-      </button>
-      <button class='b'><a href = "energetic.html">Energetic</a>
-      </button>
-      <button class='c'><a href = "bored.html">Bored</a>
-      </button>
-      <button class='d'><a href = "cheerful.html">Cheerful</a>
-      </button>
-      <button class='e'><a href = "exhausted.html">Exhausted</a>
-      </button>
-      <button class='f'><a href = "anxious.html">Anxious</a>
-      </button>
-      <button class='g'><a href = "depressed.html">Depressed</a>
-      </button>
-      <button class='h'><a href = "stressed.html">Stressed</a>
-      </button>
-      </div>
-      
-      <h1> How Are You Feeling Today? </h1>
-    <!-- YOUR EXTERNAL PLUG-IN MAY ASK YOU TO PUT A SCRIPT TAG HERE. -->
-  </body>
-</html>
+    <div id=circle></div>
+    <div id=arrow></div>
+    <p>Boredom can be caused by a number of factors, but the most common is being stuck in a repetitive or monotonous experience. Here is an exciting game you can play to cure boredom!</p >
+
+   <h1>Roll the Paper👇</h1>
+
+   <figure>
+    <a href=" "><img id="paper" src="images/Screen Shot 2022-04-29 at 1.22.38 PM.png" width=480px height=261px></a >
+   <img id="decoration" src= "images/boredom.png" width=440px height=290px>
+</figure>
+ 
+</body>
