--- a/depressed.html
+++ b/depressed.html
@@ -12,34 +12,25 @@
     <link rel="stylesheet" href="styles.normalize.css" />
     <!-- LINK TO ANY FRAMEWORK STYLES HERE-->
     <!-- LINK TO YOUR STYLES -->
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/depressed.css" />
     <!-- LINK TO EXTERNAL JS LIBRARIES HERE -->
     <!-- LINK TO YOUR JS HERE. NOTE THE DEFER ATTRIBUTE. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./scripts/scripts.js" defer></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');
+        </style>
   </head>
+
   <body>
-    <!-- YOUR HTML GOES HERE -->
-    <div>
-      <button class='a'><a href = "happy.html">Happy</a>
-      </button>
-      <button class='b'><a href = "energetic.html">Energetic</a>
-      </button>
-      <button class='c'><a href = "bored.html">Bored</a>
-      </button>
-      <button class='d'><a href = "cheerful.html">Cheerful</a>
-      </button>
-      <button class='e'><a href = "exhausted.html">Exhausted</a>
-      </button>
-      <button class='f'><a href = "anxious.html">Anxious</a>
-      </button>
-      <button class='g'><a href = "depressed.html">Depressed</a>
-      </button>
-      <button class='h'><a href = "stressed.html">Stressed</a>
-      </button>
-      </div>
-      
-      <h1> How Are You Feeling Today? </h1>
-    <!-- YOUR EXTERNAL PLUG-IN MAY ASK YOU TO PUT A SCRIPT TAG HERE. -->
-  </body>
-</html>
+    <div id=circle></div>
+    <a id=arrow href = "surveyafterdepressed.html"></a>
+    <p>Dr Chris Williams explains what you can do to help yourself cope with low mood and depression. This podcast is one of an eight-part series for Moodzone.</p >
+    <span>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TVgQ_tgWMyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </span>
+<figure>
+  <img src="images/depressed.png" width=340px height=270px>
+</figure>
+<h1> Podcast </h1>
+</body>
