--- a/exhausted.html
+++ b/exhausted.html
@@ -25,6 +25,7 @@
   <body>
     <div id=circle></div>
     <div id=arrow></div>
+    <a id=arrow href = "surveyafterexhausted.html"></a>
     <p>Because the hum of white noise is a pleasing sound for many people, it can help to induce a more relaxed state. By blocking out other sounds, white noise makes it easier to shut out the rest of the world and focus, as is necessary for practices like meditation that can aid sleep and reduce stress.</p >
     <span>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/yIQd2Ya0Ziw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
