--- a/surveyafteranxious.html
+++ b/surveyafteranxious.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/surveyafterbored.css">
+    <link rel="stylesheet" href="styles/surveyafteranxious.css">
 </head>
 
 <body>
@@ -15,8 +15,8 @@
 <div>
 	<h3> <a href = "keepupgreatwork.html">Strongly Agree</a></h3>
 	<h3> <a href = "keepupgreatwork.html">Agree</a></h3>
-	<h3> <a href = "depressedexternal.html">Neither Agree nor Disagree</a></h3>
-    <h3> <a href = "depressedexternal.html">Disagree</a></h3>
-    <h3> <a href = "depressedexternal.html">Strongly Disagree</a></h3>
+	<h3> <a href = "anxiousexternal.html">Neither Agree nor Disagree</a></h3>
+    <h3> <a href = "anxiousexternal.html">Disagree</a></h3>
+    <h3> <a href = "anxiousexternal.html">Strongly Disagree</a></h3>
 </div>
 </body>
