--- a/stressed.html
+++ b/stressed.html
@@ -25,6 +25,7 @@
   <body>
     <div id=circle></div>
     <div id=arrow></div>
+    <a id=arrow href = "surveyafterstressed.html"></a>
     <p> Meditation has been practiced for thousands of years. Meditation originally was meant to help deepen understanding of the sacred and mystical forces of life. These days, meditation is commonly used for relaxation and stress reduction.</p >
     <span>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/inpok4MKVLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
