--- a/surveyafterbored.html
+++ b/surveyafterbored.html
@@ -15,8 +15,8 @@
 <div>
 	<h3> <a href = "keepupgreatwork.html">Strongly Agree</a></h3>
 	<h3> <a href = "keepupgreatwork.html">Agree</a></h3>
-	<h3> <a href = "depressedexternal.html">Neither Agree nor Disagree</a></h3>
-    <h3> <a href = "depressedexternal.html">Disagree</a></h3>
-    <h3> <a href = "depressedexternal.html">Strongly Disagree</a></h3>
+	<h3> <a href = "boredexternal.html">Neither Agree nor Disagree</a></h3>
+    <h3> <a href = "boredexternal.html">Disagree</a></h3>
+    <h3> <a href = "boredexternal.html">Strongly Disagree</a></h3>
 </div>
 </body>
