Co-authored-by: linbuping <linbuping@users.noreply.github.com>

--- a/anxious.html
+++ b/anxious.html
@@ -27,12 +27,12 @@
     <div id=arrow></div>
     <a id=arrow href = "surveyafteranxious.html"></a>
     <p>According to an article on the American Psychological Association website, “yoga may help strengthen social attachments, reduce stress and relieve anxiety, depression and insomnia.” Reducing stress levels may be beneficial for those who have uncontrollable negative thoughts, which can occur in people with anxiety, depression, and other mental illnesses.</p >
-    <span>
+    <div class="video">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/bJJWArRfKa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </span>
+    </div>
    <h1>YOGA</h1>
 
    <figure>
-     <img src="images/anxious.png" width=390px height=310px>
+     <img src="images/anxious.png" width=200px height=180px class="img">
    </figure>
 </body>
