--- a/bored.html
+++ b/bored.html
@@ -32,7 +32,8 @@
 
    <figure>
     <a href=" "><img id="paper" src="images/Screen Shot 2022-04-29 at 1.22.38 PM.png" width=480px height=261px></a >
-   <img id="decoration" src= "images/boredom.png" width=440px height=290px>
+   
+        <img src= "images/boredom.png" width=440px height=290px class="img">
 </figure>
  
 </body>
