--- a/depressed.html
+++ b/depressed.html
@@ -26,11 +26,11 @@
     <div id=circle></div>
     <a id=arrow href = "surveyafterdepressed.html"></a>
     <p>Dr Chris Williams explains what you can do to help yourself cope with low mood and depression. This podcast is one of an eight-part series for Moodzone.</p >
-    <span>
+    <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/TVgQ_tgWMyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </span>
+    </div>
 <figure>
-  <img src="images/depressed.png" width=340px height=270px>
+  <img src="images/depressed.png" width=340px height=270px class="img">
 </figure>
 <h1> Podcast </h1>
 </body>
