--- a/energetic.html
+++ b/energetic.html
@@ -27,12 +27,12 @@
     <div id=arrow></div>
     <a id=arrow href = "keepupgreatwork.html"></a>
     <p>High-intensity exercise has a reputation for increasing stress levels, owing to a surge in cortisol and adrenaline, but as you become more active you should find that your body adapts to this, learns to cope and becomes more resilient over time, which could support stress coping strategies in daily life.</p >
-    <span>
+    <div class="video">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/ml6cT4AZdqI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </span>
+    </div>
    <h1>HIIT</h1>
 
    <figure>
-     <img src="images/HIIT.png" width=490px height=260px>
+     <img src="images/HIIT.png" width=490px height=260px class="img">
    </figure>
 </body>
