--- a/happy.html
+++ b/happy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,17 +20,21 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');
         </style>
-  </head>
+  </head> 
 
+ 
   <body>
     <div id=circle></div>
     <a id=arrow href = "keepupgreatwork.html"></a>
     <p>Dancing is often associated with being happy, but even if you’re not feeling on top of the world, getting yourself into the rhythm can mean that self-esteem gradually increases as you lose yourself in the moves.</p >
-    <span>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_5Hhv6lYls8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </span>
-<figure>
-  <img src="images/dance.png" width=400px height=275px>
+        <div class=video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_5Hhv6lYls8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    <figure>
+      <img src="images/dance.png" width= 400px height= 250px class=img>
 </figure>
-<h1> Dance </h1>
+<h1>Dance</h1>
 </body>
+
+
+
