--- a/bored.html
+++ b/bored.html
@@ -31,7 +31,7 @@
    <h1>Roll<br>the Paper</h1>
 
    <figure>
-    <a href=" "><img id="paper" src="images/Screen Shot 2022-04-29 at 1.22.38 PM.png" width=480px height=261px></a >
+    <a href="papertoilet.com"><img id="paper" src="images/Screen Shot 2022-04-29 at 1.22.38 PM.png" width=480px height=261px></a >
    
         <img src= "images/boredom.png" width=440px height=290px class="img">
 </figure>
