--- a/About.html
+++ b/About.html
@@ -12,36 +12,26 @@
     <link rel="stylesheet" href="styles.normalize.css" />
     <!-- LINK TO ANY FRAMEWORK STYLES HERE-->
     <!-- LINK TO YOUR STYLES -->
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/About.css" />
     <!-- LINK TO EXTERNAL JS LIBRARIES HERE -->
     <!-- LINK TO YOUR JS HERE. NOTE THE DEFER ATTRIBUTE. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./scripts/scripts.js" defer></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');
+      </style>
+ 
   </head>
   <body>
     <!-- YOUR HTML GOES HERE -->
-    <div>
-      <button class='a'><a href = "happy.html">Happy</a>
-      </button>
-      <button class='b'><a href = "energetic.html">Energetic</a>
-      </button>
-      <button class='c'><a href = "bored.html">Bored</a>
-      </button>
-      <button class='d'><a href = "cheerful.html">Cheerful</a>
-      </button>
-      <button class='e'><a href = "exhausted.html">Exhausted</a>
-      </button>
-      <button class='f'><a href = "anxious.html">Anxious</a>
-      </button>
-      <button class='g'><a href = "depressed.html">Depressed</a>
-      </button>
-      <button class='h'><a href = "stressed.html">Stressed</a>
-      </button>
-      <button class='i'><a href = "About.html">About</a>
-      </button>
-      </div>
-      
-      <h1> How Are You Feeling Today? </h1>
+<!-- 1st row vertically centered text in the square columns -->
+<div id=circle></div>
+<h1>MOOD BUBBLES</h1>
+<ul>
+  <li><a href="https://docs.google.com/document/d/1Un2yktxg3Xj6shKCWEr9tATcqhtBG_hPARe6vv4xhRs/edit?usp=sharing">PROPOSAL</a></li>
+  <li><a href="https://docs.google.com/document/d/1kL_rtUjqYoaki_5t-nOq-JHCFG5T9wc2csB1jHkbbk8/edit?usp=sharing">RESOURCES</a></li>
+  <li><a href="https://docs.google.com/document/d/1iH831kqZppyt5g74ZDPv2fA0YWI9E1Jb4Wrc_8w0I-s/edit?usp=sharing">UX REPORT</a></li>
+</ul>
+<h3><a href = "index.html">Return to homepage</a ></h3>
     <!-- YOUR EXTERNAL PLUG-IN MAY ASK YOU TO PUT A SCRIPT TAG HERE. -->
   </body>
 </html>
