--- a/bored.html
+++ b/bored.html
@@ -26,14 +26,16 @@
     <div id=circle></div>
     <div id=arrow></div>
     <a id=arrow href = "surveyafterbored.html"></a>
+    <div class="container">
     <p>Boredom can be caused by a number of factors, but the most common is being stuck in a repetitive or monotonous experience. Here is an exciting game you can play to cure boredom!</p >
 
    <h1>Roll<br>the Paper</h1>
-
-   <figure>
-    <a href="papertoilet.com"><img id="paper" src="images/Screen Shot 2022-04-29 at 1.22.38 PM.png" width=480px height=261px></a >
    
+   <div class="image">
+    <a href="papertoilet.com"><img id="paper" src="images/Screen Shot 2022-04-29 at 1.22.38 PM.png" width=480px height=261px></a >
+    </div>
+      <figure>
         <img src= "images/boredom.png" width=440px height=290px class="img">
 </figure>
- 
+
 </body>
