--- a/depressed.html
+++ b/depressed.html
@@ -25,7 +25,8 @@
   <body>
     <div id=circle></div>
     <a id=arrow href = "surveyafterdepressed.html"></a>
-    <p>Dr Chris Williams explains what you can do to help yourself cope with low mood and depression. This podcast is one of an eight-part series for Moodzone.</p >
+    <div class="container">
+    <p>Leading depression expert and clinical psychologist Dr Michael Yapko draws on research and shares his insights from 40 years of working with those suffering this common mental health issue. Learn the simple skills that research shows can help you or a loved one to recover - and even prevent depression occurring - in this heartwarming and uplifting speech for the Australian Psychological Society.</p >
     <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/TVgQ_tgWMyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
@@ -33,4 +34,5 @@
   <img src="images/depressed.png" width=340px height=270px class="img">
 </figure>
 <h1> Podcast </h1>
+</div>
 </body>
