--- a/happy.html
+++ b/happy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,24 +17,22 @@
     <!-- LINK TO YOUR JS HERE. NOTE THE DEFER ATTRIBUTE. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./scripts/scripts.js" defer></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');
-        </style>
-  </head> 
+   
+  </head>
 
- 
+
   <body>
     <div id=circle></div>
+    <div id=arrow></div>
     <a id=arrow href = "keepupgreatwork.html"></a>
+    <div class="container">
     <p>Dancing is often associated with being happy, but even if you’re not feeling on top of the world, getting yourself into the rhythm can mean that self-esteem gradually increases as you lose yourself in the moves.</p >
-        <div class=video>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/_5Hhv6lYls8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    <figure>
-      <img src="images/dance.png" width= 400px height= 250px class=img>
+    <div class=video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_5Hhv6lYls8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+<figure>
+  <img src="images/dance.png" width= 400px height= 250px class=img>
 </figure>
-<h1>Dance</h1>
+<h1> Dance </h1>
+</div>
 </body>
-
-
-
