--- a/stressed.html
+++ b/stressed.html
@@ -26,7 +26,8 @@
     <div id=circle></div>
     <div id=arrow></div>
     <a id=arrow href = "surveyafterstressed.html"></a>
-    <p> Meditation has been practiced for thousands of years. Meditation originally was meant to help deepen understanding of the sacred and mystical forces of life. These days, meditation is commonly used for relaxation and stress reduction.</p >
+    <div class="container">
+    <p>Meditation has been practiced for thousands of years. Meditation originally was meant to help deepen understanding of the sacred and mystical forces of life. These days, meditation is commonly used for relaxation and stress reduction.</p >
     <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/inpok4MKVLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
@@ -34,4 +35,5 @@
   <img src="images/meditation.png" width=490px height=250px class="img">
 </figure>
 <h1> Meditation </h1>
+</div>
 </body>
