--- a/surveyafteranxious.html
+++ b/surveyafteranxious.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/surveyafteranxious.css">
+    <link rel="stylesheet" href="styles/survey.css">
 </head>
 
 <body>
 <div id=circle></div>
 <h1> Feel Better? </h1>
 
-<div>
+<div class="container">
 	<h3> <a href = "keepupgreatwork.html">Strongly Agree</a></h3>
 	<h3> <a href = "keepupgreatwork.html">Agree</a></h3>
 	<h3> <a href = "anxiousexternal.html">Neither Agree nor Disagree</a></h3>
