--- a/cheerful.html
+++ b/cheerful.html
@@ -26,6 +26,7 @@
     <div id=circle></div>
     <div id=arrow></div>
     <a id=arrow href = "keepupgreatwork.html"></a>
+    <div class="container">
     <p>You may not realize it at the time, but the benefits of cheer can help you navigate life in a unique and incredible way. Aside from the physical skills it takes to stunt, jump and tumble, being a cheerleader teaches you practical life skills like discipline, teamwork and goal setting, all while building confidence.</p >
         <div class=video>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xPH7cD-1J2w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -37,5 +38,6 @@
     <img src="images/cheerdancing.png" width=380px height=480px class="img"></a >
    </figure>
    
+  </div>
 
 </body>
