--- a/exhausted.html
+++ b/exhausted.html
@@ -26,14 +26,14 @@
     <div id=circle></div>
     <div id=arrow></div>
     <a id=arrow href = "surveyafterexhausted.html"></a>
+  <div class="container">
     <p>Because the hum of white noise is a pleasing sound for many people, it can help to induce a more relaxed state. By blocking out other sounds, white noise makes it easier to shut out the rest of the world and focus, as is necessary for practices like meditation that can aid sleep and reduce stress.</p >
     <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/yIQd2Ya0Ziw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-
 <h1> Relax</h1>
-
 <figure>
     <img src="images/exhausted.png" width=400px height=250px class="img">
 </figure>
+</div>
 </body>
